# pathtraced-renderer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  camera.h  main.cpp
assets/eqrect/: Attribution.txt
core/: geometry.cpp  geometry.h  ray.h  util.h
graphics/: camera.cpp  camera.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  main_window.cpp  main_window.h  quad_renderer.cpp  quad_renderer.h  quad_texture_renderer.cpp  quad_texture_renderer.h  shader.cpp  shader.h  sphere.cpp  sphere.h  window.cpp  window.h
graphics/shaders/: quad_renderer.fs  quad_renderer.vs
src/core/: bound.cpp  bound.h  geometry.cpp  geometry.h  matrix.cpp  matrix.h  quadratic_solver.h  ray.cpp  ray.h  util.h
src/graphics/: Light.cpp  Light.hpp  camera.cpp  camera.h  cube_map.cpp  cube_map.h  equirectangular_map.cpp  equirectangular_map.h  fps_counter.cpp  fps_counter.h  lambertian.cpp  lambertian.h  lambertian_emitter.cpp  lambertian_emitter.h  light_interaction.cpp  light_interaction.h  main_window.cpp  main_window.h  material.h  metal.cpp  metal.h  quad_renderer.cpp  quad_renderer.h  render_primitive.h  render_primitive_group.cpp  render_primitive_group.h  shader.cpp  shader.h  sphere.cpp  sphere.h  stb_image.cpp  texture.cpp  texture.h  triangle.cpp  triangle.h  triangle_mesh.cpp  triangle_mesh.h
src/graphics/shaders/: quad_renderer.fs
test/: bound_test.cpp  quadratic_solver_test.cpp  tests_main.cpp  vector_test.cpp
